--- a/memo/20191022.md
+++ b/memo/20191022.md
@@ -1532,3 +1532,629 @@ def create_posting(request):
 
 `python manage.py runserver`
 
+
+
+models.py
+
+```python
+from django.db import models
+from django.urls import reverse
+from django_extensions.db.models import TimeStampedModel
+from django.contrib.auth import get_user_model
+
+from imagekit.models import ProcessedImageField
+from imagekit.processors import ResizeToFit
+
+User = get_user_model()
+
+# class HashTag(TimeStampedModel):
+#     content = models.CharField(max_length=20, unique=True)
+
+# Create your models here.
+class Posting(TimeStampedModel):
+    # like_users = models.ManyToManyField(User, related_name='like_posts', blank=True)
+    author = models.ForeignKey(User, on_delete=models.CASCADE, related_name='postings')
+    # hashtags = models.ManyToManyField(HashTag, blank=True, related_name='postings')
+
+    content = models.CharField(max_length=140)
+
+    class Meta:
+        ordering = ('-created',)
+
+    def get_absolute_url(self):
+        return reverse("postings:posting_detail", kwargs={"posting_id": self.pk})
+    
+
+class Image(models.Model):
+    posting = models.ForeignKey(Posting, on_delete=models.CASCADE, related_name='images')
+    file = ProcessedImageField(
+        processors=[ResizeToFit(600, 600, mat_color=(45,45,45))],  # 수정 (0,0,0)은 검정 // (45,45,45)는 적당한 회색
+        upload_to='postings/images',
+        format='JPEG',  # 'JPEG'=='JPG'
+        options={'quality': 90},
+    )
+
+
+class Comment(TimeStampedModel):
+    author = models.ForeignKey(User, on_delete=models.CASCADE, related_name='comments')
+    posting = models.ForeignKey(Posting, on_delete=models.CASCADE, related_name='comments')
+    content = models.CharField(max_length=140)
+
+# p = Posting.objects.last()
+
+# p.image_set.all()  # related_name 이 default
+# p.images.all()  # related_name='images'
+```
+
+
+
+`pip install pilkit django-imagekit`
+
+
+
+_posting.html
+
+```html
+<div class="card my-3">
+    {% if posting.images %}
+	    <div id="posting{{posting.id}}" class="carousel slide carousel-fade" data-ride="carousel">
+	        <div class="carousel-inner">
+	            {% for image in posting.images.all %}
+	                <div class="carousel-item {% if forloop.counter == 1 %} active {% endif %}">
+	                    <img src="{{ image.file.url }}" class="d-block w-100">
+	                </div>
+	            {% endfor %}
+					</div>
+	        <a class="carousel-control-prev" href="#posting{{posting.id}}" role="button" data-slide="prev">
+	                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	                <span class="sr-only">Previous</span>
+	        </a>
+	        <a class="carousel-control-next" href="#posting{{posting.id}}" role="button" data-slide="next">
+	            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	            <span class="sr-only">Next</span>
+	        </a>
+	    </div>
+    {% else %}
+        <img src="..." alt="..." class="card-img-top" />
+    {% endif %}
+    <div class="card-body">
+        <p class="card-text">{{posting.content}}</p>
+        <a href="{% url 'postings:update_posting' posting.id %}" class="btn btn-warning">수정</a>
+    </div>
+</div>
+```
+
+posting_detail.html
+
+```html
+{% extends 'base.html' %}
+{% block body %}
+{% include 'postings/_posting.html' %}
+{% endblock body %}
+```
+
+posting_list.html
+
+```html
+{% extends 'base.html' %}
+{% block body %}
+
+{% for posting in postings %}
+    {% include 'postings/_posting.html' %}
+{% endfor %}
+
+{% include 'postings/_posting.html' %}
+{% endblock body %}
+```
+
+=============================================================
+
+`python manage.py migrate postings zero`
+
+images 다 지우기
+
+python manage.py migrate
+
+=============================================================
+
+views.py
+
+```python
+from django.shortcuts import render, redirect, get_object_or_404
+from django.views.decorators.http import require_http_methods, require_GET, require_POST
+from django.contrib.auth.decorators import login_required
+
+from .forms import PostingForm, ImageForm
+from .models import Posting
+
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    return render(request, 'postings/posting_detail.html', {
+        'posting': posting,
+    })
+
+@require_GET
+def posting_list(request):
+    postings = Posting.objects.all()
+    return render(request, 'postings/posting_list.html', {
+        'posting': posting,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def create_posting(request):
+    images = request.FILES.getlist('file')
+    if request.method == 'POST':
+        posting_form = PostingForm(request.POST)
+        if posting_form.is_valid() and len(images) <= 5:
+            posting = posting_form.save(commit=False)
+            posting.author = request.user
+            posting.save()
+            for image in images:
+                request.FILES['file'] = image
+                image_form = ImageForm(files=request.FILES)  # Form 류는 request 로 시작하는 객체여야만 사용가능.
+                if image_form.is_valid():
+                    image = image_form.save(commit=False)
+                    image.posting = posting
+                    image.save()
+            return redirect(posting)
+    else:
+        posting_form = PostingForm()
+        image_form = ImageForm()
+    return render(request, 'postings/posting_form.html', {
+        'posting_form': posting_form,
+        'image_form': image_form,
+    })
+
+@login_required
+@require_http_methods(['GET', 'POST'])
+def update_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.method == 'POST':
+        form = PostingForm(request.POST, instance=posting)
+        if form.is_valid():
+            posting = form.save()
+            return redirect(posting)
+    else:
+        form = PostingForm(instance=posting)
+    return render(request, 'postings/posting_form.html', {
+        'form': form,
+    })
+
+@login_required
+@require_POST
+def delete_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    posting.delete()
+    return redirect('postings:posting_list')
+```
+
+`python manage.py runserver`
+
+
+
+_navbar.html
+
+```html
+<nav class="mb-3 navbar sticky-top navbar-expand-lg navbar-light bg-light px-5">
+    <a class="navbar-brand" href="#">
+        <i class="fab fa-instagram"></i> | Instagram
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'postings:create_posting' %}">New</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">MyPage</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'accounts:logout' %}" class="nav-link">Logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a href="{% url 'accounts:signup' %}" class="nav-link">Signup</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'accounts:login' %}" class="nav-link">Login</a>
+            </li>
+            {% endif %}
+
+        </ul>
+    </div>
+</nav>
+```
+
+posting_list.html
+
+```html
+{% extends 'base.html' %}
+{% block body %}
+<div class="card-columns">
+{% for posting in postings %}
+<a href="{% url 'postings:posting_detail' posting.id %}">
+    {% include 'postings/_posting.html' %}
+</a>
+{% endfor %}
+</div>
+{% endblock body %}
+```
+
+_navbar.html
+
+```html
+<nav class="mb-3 navbar sticky-top navbar-expand-lg navbar-light bg-light px-5">
+    <a class="navbar-brand" href="{% url 'postings:posting_list' %}">
+        <i class="fab fa-instagram"></i> | Instagram
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'postings:create_posting' %}">New</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">MyPage</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'accounts:logout' %}" class="nav-link">Logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a href="{% url 'accounts:signup' %}" class="nav-link">Signup</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'accounts:login' %}" class="nav-link">Login</a>
+            </li>
+            {% endif %}
+
+        </ul>
+    </div>
+</nav>
+```
+
+
+
+### 수정
+
+postings - views.py - update_posting 함수
+
+```python
+@login_required
+@require_http_methods(['GET', 'POST'])
+def update_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if posting.autor == request.user:
+    if request.method == 'POST':
+        posting_form = PostingForm(request.POST, instance=posting)
+        if form.is_valid():
+            posting = form.save()
+            return redirect(posting)
+        else:
+            form = PostingForm(instance=posting)
+    else:
+        return redirect(posting)
+    return render(request, 'postings/posting_form.html', {
+        'posting_form': form,
+    })
+```
+
+posting_form.html
+
+```html
+{% extends 'base.html' %}
+{% load bootstrap4 %}
+
+{% block body %}
+<form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    {% bootstrap_form posting_form %}
+    {% if image_form %}
+        {% bootstrap_form image_form show_label=False %
+    {% endif %}
+    {% buttons %}
+    <button class="btn btn-primary">Submit</button>
+    {% endbuttons %}
+</form>
+{% endblock body %}
+```
+
+
+
+comment 주석 해제하고
+
+`python manage.py makemigrations`
+
+`python manage.py migrate`
+
+
+
+postings - urls.py
+
+```python
+from django.urls import path
+from . import views
+
+app_name = 'postings'
+
+# insta/
+urlpatterns = [
+    path('', views.posting_list, name='posting_list'),
+    path('<int:posting_id>/', views.posting_detail, name='posting_detail'),
+    path('create/', views.create_posting, name='create_posting'),
+    path('<int:posting_id>/update/', views.update_posting, name='update_posting'),
+    path('<int:posting_id>/delete/', views.delete_posting, name='delete_posting'),
+
+    path('<int:posting_id>/comments/create/', views.create_comment, name='create_comment'),
+]
+```
+
+
+
+postings - views.py
+
+```python
+@login_required
+@require_POST
+def create_comment(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    
+    return redirect(posting)
+```
+
+
+
+postings - forms.py
+
+```python
+from django import forms
+from .models import Posting, Image, Comment
+
+class PostingForm(forms.ModelForm):
+    class Meta:
+        model = Posting
+        fields = ('content', )
+
+class ImageForm(forms.ModelForm):
+    class Meta:
+        model = Image
+        fields = ('file', )
+        widgets = {
+            'file': forms.FileInput(attrs={'multiple': True})
+        }
+
+class CommentForm(forms.ModelForm):
+    class Meta:
+        model = Comment
+        fields = ('content', )
+```
+
+
+
+postings - views.py
+
+```python
+from .forms import PostingForm, ImageForm, CommentForm
+from .models import Posting, Comment
+```
+
+```python
+@login_required
+@require_POST
+def create_comment(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    comment_form = CommentForm(request.POST)
+    if form.is_valid():
+        comment = form.save(commit=False)
+        comment.author = request.user
+        comment.posting = posting
+        comment.save()
+    return redirect(posting)
+```
+
+```python
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    comments = Comment.objects.all()
+    comment_form = CommentForm()
+
+    return render(request, 'postings/posting_detail.html', {
+        'posting': posting,
+        'comments': comments,
+        'comment_form': comment_form,
+    })
+```
+
+posting_detail.html
+
+```html
+{% extends 'base.html' %}
+{% block body %}
+{% include 'postings/_posting.html' %}
+{% include 'postings/_comment.html' %}
+{% endblock body %}
+```
+
+`touch postings/templates/postings/_comment.html`
+
+
+
+views.py
+
+```python
+@require_GET
+def posting_detail(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    comment_form = CommentForm()
+
+    return render(request, 'postings/posting_detail.html', {
+        'posting': posting,
+        'comment_form': comment_form,
+    })
+```
+
+posting_list.html
+
+```html
+{% extends 'base.html' %}
+{% block body %}
+<div class="card-columns">
+{% for posting in postings %}
+<a href="{% url 'postings:posting_detail' posting.id %}">
+    {% include 'postings/_posting.html' %}
+</a>
+{% endfor %}
+</div>
+{% endblock body %}
+```
+
+_comment.html
+
+```html
+{% load bootstrap4 %}
+<div class="card-body">
+    <div class="card-footer">
+        <form action="{% url 'postings:create_comment' posting.id %}" method="POST">
+            {% csrf_token %}
+            {% bootstrap_form comment_form %}
+            {% buttons %}
+                <input type="submit" value="게시" class="btn btn-primary">
+            {% endbuttons %}
+        </form>
+    </div>
+    {% for comment in posting.comments.all %}
+    <p class="card-text"><strong>{{comment.author}}</strong> {{comment.content}}</p>
+    {% empty %}
+    <p class="card-text">댓글이 없습니다.</p>
+    {% endfor %}
+</div>
+```
+
+
+
+models.py
+
+```python
+class Posting(TimeStampedModel):
+    like_users = models.ManyToManyField(User, related_name='like_posts')
+    author = models.ForeignKey(User, on_delete=models.CASCADE, related_name='postings')
+    # hashtags = models.ManyToManyField(HashTag, blank=True, related_name='postings')
+
+    content = models.CharField(max_length=140)
+
+    class Meta:
+        ordering = ('-created',)
+
+    def get_absolute_url(self):
+        return reverse("postings:posting_detail", kwargs={"posting_id": self.pk})
+```
+
+`python manage.py makemigrations`
+
+`python manage.py migrate`
+
+
+
+postings-views.py
+
+```python
+@login_required
+@require_POST
+def toggle_like(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    user = request.user
+
+    # 좋아요를 누른 user 라면,
+    if posting.like_users.filter(id=user.id).exist():
+        posting.like_users.remove(user)
+    else:
+        posting.like_users.add(user)
+    return redirect(posting)
+```
+
+postings-urls.py추가 
+
+```python
+path('<int:posting_id>/like/', views.toggle_like, name='like')
+```
+
+_posting.html
+
+```html
+<div class="card my-3">
+	{% if posting.images %}
+	<div id="posting{{posting.id}}" class="carousel slide carousel-fade" data-ride="carousel">
+		<div class="carousel-inner">
+			{% for image in posting.images.all %}
+			<div class="carousel-item {% if forloop.counter == 1 %} active {% endif %}">
+				<img src="{{ image.file.url }}" class="d-block w-100">
+			</div>
+			{% endfor %}
+		</div>
+		<a class="carousel-control-prev" href="#posting{{posting.id}}" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#posting{{posting.id}}" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+	{% else %}
+	<img src="..." alt="..." class="card-img-top" />
+	{% endif %}
+	<div class="card-body">
+		<form action="{% url 'postings:like' posting.id %}" method="POST">
+			{% csrf_token %}
+			<button style="border: 0; background: none;">
+				{% if is_like %}
+				<i class="fas fa-heart fa-lg" style="color: #ed4956;">
+				</i>
+				{% else %}
+				<i class="fas fa-heart fa-lg" style="color: #black;">
+					<span class="badge badge-light"></span>
+				</i>
+				{% endif %}
+			</button>
+		</form>
+		<p class="card-text">{{posting.content}}</p>
+		<a href="{% url 'postings:update_posting' posting.id %}" class="btn btn-warning">수정</a>
+	</div>
+</div>
+```
+
+views.py
+
+```python
+@login_required
+@require_http_methods(['GET', 'POST'])
+def update_posting(request, posting_id):
+    posting = get_object_or_404(Posting, id=posting_id)
+    if request.user == posting.author:
+        if request.method == 'POST':
+            form = PostingForm(reqeust.POST, instance=posting)
+            if form.is_valid():
+                posting = form.save()
+                return redirect(posting)
+        else:
+            form = PostingForm(instance=posting)
+    else:
+        return redirect(posting)
+    return render(request, 'postings/posting_form.html', {
+        'posting_form': form,
+    })
+```
+
