--- a/Programming_Study/HTML_CSS_JAVASCRIPT/JavaScript/자바스크립트/자바스크립트.md
+++ b/Programming_Study/HTML_CSS_JAVASCRIPT/JavaScript/자바스크립트/자바스크립트.md
@@ -49,15 +49,857 @@ Visual Studio Code 설치
 
 Expression, Statement
 
-Expression : 값을 만들어내는 간단한 코드. 표현식.
+### Expression 
+
+* 값을 만들어내는 간단한 코드. 표현식.
+* 표현식은 값을 만들어내기 때문에 함수의 인자로 사용할 수 있다.
 
 true
 
-27
+26
 
-100+3+5
+1000+900+90+4
 
 "Anna"
 
 "Hello" + "JavaScript"
+
+alert(1000+900+90+4)
+
+alert("Hello" + "JavaScript")
+
+
+
+Statement
+
+* 하나 혹은 여러 개의 표현식이 모여 문장을 이룬다
+* 모든 표현식은 문장이 될 수 있다
+* (보통) 문장의 끝에는 세미 콜론을 붙인다
+* 한 줄에 문장이 하나인 경우에는 세미 콜론을 붙이지 않아도 문제가 없지만 관례적으로 붙인다
+* 한 줄에 여러 문장을 적을 경우, 세미 콜론으로 문장을 구분해야 한다
+* 마지막 문장은 세미 콜론을 붙이지 않아도 문제가 없다
+* 마지막 문장의 결과가 반환된다
+* 조건문 (if), 반복문 (for) 도 문장이다
+* 이 경우 마지막 } 뒤에 세미콜론을 붙이지 않는다
+* 문장들이 모여 만들고자 하는 프로그램이 된다
+
+true;
+
+26;
+
+1000+900+90+4;
+
+"Anna";
+
+"Hello" + "JavaScript";
+
+var name = "Mark";
+
+alert('Hello');
+
+
+
+console에
+
+true; 26; 1000+900+90+4 
+
+쳐보면
+
+1994 나옴
+
+
+
+#### 키워드와 예약어
+
+Keywords & Reserved Words
+
+### Keywords
+
+* 자바스크립트에서 특정한 목적을 위해 사용하는 단어
+* 이러한 키워드 들은 예약어로 지정되어 있다
+
+```javascript
+// in Browser
+
+var name = 'Mark';  // var 라는 단어는 변수를 선언할 때 사용하는 키워드
+```
+
+### Reserved Words
+
+프로그램을 작성할 때, 변수명, 함수명 등 이름으로 사용할 수 없는 단어
+
+이미 특정한 목적을 위해 사용하기 때문에 사용할 수 없는 예약어
+
+```javascript
+// in Browser
+var return = '변수명';  // return 은 예약어라 변수명으로 사용할 수 없다
+function for() {}  // for 는 예약어라 함수명으로 사용할 수 없다
+```
+
+### Future reserved keywords
+
+앞으로 특정한 목적을 위해 사용할 가능성이 있어서 사용할 수 없는 예약어
+
+
+
+### 식별자 Identifier
+
+코드 내의 변수, 함수, 혹은 속성을 식별하는 문자열
+
+대소문자를 구분한다
+
+'유니코드 문자'(한글도 가능은 함), '$', '_', '숫자(0-9)' 를  사용할 수 있지만, 숫자로 시작할 수는 없다
+
+'예약어'는 사용할 수 없고, '공백 문자'도 사용할 수 없다
+
+```javascript
+// in Browser
+
+var name = 'Mark';
+function hello() {}
+var person = {name: 'Mark', age: 37};
+
+var myName = 'Mark';
+var myname = 'Mark';
+
+var name1;
+var $name;
+var _name
+// var 1name; 이런건 안됨
+var 이름;  // 가능은 하지만 영문 사용
+```
+
+mothereff.in/js-variables
+
+프로그램에서 사용하는 변수나 함수의 이름 - 역할에 맞는 적절한 이름
+
+
+
+주석 Comments
+
+* 소스 코드에서 프로그램에 영향을 주지 않고 무시되는 부분
+* 소스코드를 이해할 수 있도록 돕는 역할
+
+```javascript
+// in Browser
+
+// 이 함수는 인사를 하는 함수 <= 주석으로 소스코드 설명
+function hello()
+
+// 이 줄만 주석
+// Ctrl + /
+
+/*
+여러 줄 주석
+*/
+```
+
+
+
+#### 변수와 상수
+
+variable and constant
+
+```javascript
+// 5 와 10 을 더해서,
+// 3 으로 나누어 나머지가 0 이면, '야호3' 출력
+// 5 로 나누어 나머지가 0 이면, '야호5' 출력
+
+if ((5 + 10) % 3 === 0) {
+    console.log('야호3');
+}
+if ((5 + 10) % 5 === 0) {
+    console.log('야호5');
+}
+```
+
+
+
+const 상수를_지칭하는_이름 
+
+상수를 선언하는 방법
+
+```javascript
+// 5 와 10 을 더해서,
+// sum 이라는 이름의 상수에 보관한 뒤,
+// 3 으로 나누어 나머지가 0 이면, '야호3' 출력
+// 5 로 나누어 나머지가 0 이면, '야호5' 출력
+
+const sum = 5 + 10;
+
+if (sum % 3 === 0) {
+    console.log('야호3');
+}
+if (sum % 5 === 0) {
+    console.log('야호5');
+}
+```
+
+const 상수를_지칭하는_이름 = 값;
+
+상수를 선언하면서 바로 값을 할당하는 방법
+
+
+
+let 변수를_지칭하는_이름;
+
+변수를 선언하는 방법
+
+
+
+변수를_지칭하는_이름 = 값;
+
+변수에 값을 할당하는 방법
+
+
+
+let 변수를_지칭하는_이름 = 값;
+
+변수에 값을 할당하는 방법
+
+
+
+```javascript
+// 5 와 10 을 더해서,
+// sum 이라는 이름의 상수에 보관한 뒤,
+// 3 으로 나누어 나머지가 0 이면, '야호3' 출력
+// 5 로 나누어 나머지가 0 이면, '야호5' 출력
+// result 라는 변수는 3으로 나누어 떨어지거나
+// 5로 나누어 떨어지면 true 라는 값을 가지고
+// 아니면 false 라는 값을 가짐
+
+const sum = 5 + 10;
+let result = false;
+
+if (sum % 3 === 0) {
+    console.log('야호3');
+    result = true;
+}
+
+if (sum % 5 === 0) {
+    console.log('야호5');
+    result = true;
+}
+
+console.log(result);
+```
+
+
+
+변수의 유효 범위
+
+scope of variables
+
+const, let 의 유효 범위
+
+블록 스코프
+
+{} 블록
+
+```javascript
+// 블럭
+{
+    //
+    const name = 'Mark';
+    console.log(name);
+}
+
+// console.log(name);  // name is not defined
+
+// 밖에서 안으로
+let age = 37;
+
+{
+    age++
+    console.log(age);
+}
+
+console.log(age);
+
+// 중첩
+{
+    {
+        {
+            console.log(age);  // 잘 출력됨
+        }
+    }
+}
+```
+
+```javascript
+// 조건문
+if (true) {
+    let age = 37;
+    console.log(age);
+}
+
+// age++;
+
+// 반복문
+for (let i=0; i<5; i++) {
+    const message = 'hello:' + i;
+    console.log(message);
+}
+
+// console.log(message);
+
+// 함수
+function hello1() {
+    const name = 'Mark';
+    console.log(name);
+}
+
+// console.log(name);
+
+// arrow 함수
+const hello2 = () => {
+    const age = 37;
+    console.log(age);
+};
+
+// console.log(age);
+```
+
+
+
+var 의 유효 범위
+
+함수 스코프
+
+```javascript
+function() {}
+// 함수
+```
+
+```javascript
+// var 함수 스코프
+
+var a = 0;
+
+(function() {
+    a++;
+    console.log(a);
+})();
+
+console.log(a);
+
+(function() {
+    var b = 0;
+    console.log(b);
+})();
+
+
+b++;
+console.log(b);  // b is not defined
+```
+
+```javascript
+// 블록 스코프
+
+var c = 0;
+
+{
+    c++;
+    console.log(c);
+}
+
+{
+    var d = 0;
+    console.log(d);
+}
+// let, const 는 문제가 되지만(블록 스코프에서만 유효)
+// var 는 함수에서만 구분되는 스코프를 가지고 있어서
+// 출력됨
+// var 보다 let, const 많이 씀
+console.log(d);
+```
+
+
+
+var 와 호이스팅
+
+var & hoisting
+
+호이스팅(hoisting)은 ECMAScript 2015 언어 명세 및 그 이전 표준 명세에서 사용된 적 없는 용어.
+
+```javascript
+// 함수 먼저
+function hello1() {
+    console.log('hello1');
+}
+
+hello1();
+
+
+// 함수의 호출을 먼저
+// 정상적으로 출력됨
+hello2();
+
+function hello2() {
+    console.log('hello2');
+}
+```
+
+hoisting : 아래 있는 선언을(만) 끌어올리다
+
+```javascript
+// 정상적으로 실행됨
+age = 6;
+age++;
+console.log(age);
+
+var age;
+```
+
+```javascript
+console.log(name);  // Undefined
+
+name = 'Mark';
+
+console.log(name);  // Mark
+
+var name;
+```
+
+```javascript
+console.log(name);  // Undefined
+
+name = 'Mark';
+
+console.log(name);  // Mark
+
+var name = 'Woongjae';
+```
+
+위에 코드는
+
+```javascript
+var name;
+
+console.log(name);
+
+name = 'Mark';
+
+console.log(name);
+
+name = 'Woongjae';
+```
+
+```javascript
+console.log(name);  // name is not defined
+
+name = 'Mark';
+
+console.log(name);
+
+let name;  // let은 먼저 선언되어야 사용 가능해서 호이스팅 문제 없어짐
+```
+
+
+
+자료형 Data Types
+
+MDN web docs - 자바스크립트의 자료형
+
+* 동적 타이핑 : 변수가 가지는 고정 타입이 없다. 하지만 타입이 없는 것은 아니다.
+
+```javascript
+let whatever = 'Mark';
+
+whatever = 37;  // 숫자형 타입이 됨
+
+whatever = true;  // boolean 형 타입이 됨. 값에 따라서 변수 타입이 달라짐 => 동적 타이핑(다이나믹타입랭귀지)
+```
+
+데이터 타입
+
+* 기본 타입 (Primitive values)
+  * Boolean
+  * Null
+  * Undefined
+  * Number
+  * String
+  * Symbol (ECMAScript 6 에 추가됨)
+* 객체 (Objects)
+
+```javascript
+// Boolean
+
+const isTrue = true;
+const isFalse = false;
+
+console.log(isTrue, typeof isTrue);
+console.log(isFalse, typeof isFalse);
+
+const a = new Boolean(false);
+console.log(a, typeof a);
+// [Boolean: false] 'object'
+
+if (a) {  // a 는 객체이므로 조건문 안에서 True 로 평가됨. 그래서 이런식으로 안사용함. 
+    console.log('false?');
+}
+
+const b = Boolean(false);  // 함수 실행
+console.log(b, typeof b);
+// false 'boolean'
+// primitive value로 제대로 찍힘
+
+if (b) {
+    // b 는 false 이므로 출력되지 않음
+    console.log('false?');
+}
+```
+
+```javascript
+// Null
+
+const a = null;
+
+console.log(a, typeof a);
+// null 'object'
+
+
+// Undefined
+
+let b;
+
+console.log(b, typeof b);
+
+b = undefined;
+
+console.log(b, typeof b);
+
+// undefined 'undefined'
+// undefined 'undefined'
+
+if (a == b) {
+    console.log(a == b);
+}
+// true
+
+if (a === b) {
+    console.log(a === b);
+}
+// 값 뿐 아니라 타입도 비교
+// false
+```
+
+```javascript
+// Number
+
+const a = 38;
+
+console.log(a, typeof a);  // 38 'number'
+
+const b = 96.7;
+
+console.log(b, typeof b);  // 96.7 'number'
+
+const c = NaN;
+
+console.log(c, typeof c);  // NaN 'number'
+
+
+// 문자열이 형변환이 숫자로 제대로 안되는 경우 NaN
+const d = Number('Mark');
+
+console.log(d, typeof d);  // NaN 'number'
+
+// 숫자형으로 제대로 형변환
+const e = Number('36');
+
+console.log(e, typeof e);  // 36 'number'
+```
+
+```javascript
+// String
+
+const a = 'Mark';
+
+console.log(a, typeof a);  // Mark string
+
+const b = 'Mark' + 'Lee';
+const c = a + ' Lee';
+console.log(c, typeof c);  // Mark Lee string
+
+const d = `${a} Lee`;
+
+console.log(d, typeof d);  // Mark Lee string
+```
+
+```javascript
+const a = Symbol();
+const b = Symbol(37);
+const c = Symbol('Mark');
+const d = Symbol('Mark');
+
+console.log(a, typeof a);  // Symbol() 'symbol'
+console.log(c === d);  // false
+
+new Symbol();  // Symbol is not a constructor 생성자 함수로 사용할 수 없음. 만들어진 Symbol은 고유한 것을 의미.
+```
+
+
+
+조건문 Conditional Statements
+
+표현식이 참으로 평가될 때, 실행되는 블럭
+
+```javascript
+/*
+if (표현식) {
+	표현식이 참으로 평가될 때, 실행되는 문장들의 모음
+}
+*/
+
+if (true) {
+    console.log('항상 실행');
+}
+if (false) {
+    console.log('항상 실행되지 않음');
+}
+
+// 블록에 코드가 한줄이면, 중괄호 {} 는 생략 가능
+if (true) console.log('항상 실행');
+if (false) console.log('항상 실행되지 않음');
+```
+
+표현식이 거짓으로 평가될 때
+
+#### Falsy
+
+false, 0, ", null, undefined, NaN
+
+
+
+표현식이 참으로 평가될 때
+
+Truethy
+
+Falsy 의 반대: true, 37, 'Mark', {}, []
+
+* true
+* 0이 아닌 숫자
+* 빈 문자열이 아닌 문자열
+* NaN이 아닌 모든 객체
+
+```javascript
+// false
+// 0
+// ''
+// null
+// undefined
+// NaN
+
+if (false) console.log(false);
+if (0) console.log(false);
+if ('') console.log('');
+if (null) console.log(null);
+if (undefined) console.log(undefined);
+if (NaN) console.log(NaN);
+
+// true
+// 37
+// -37
+// 'Mark'
+// {}
+// []
+
+if (true) console.log(true);
+if (37) console.log(37);
+if (-37) console.log(-37);
+if ('Mark') console.log('Mark');
+if ({}) console.log({});
+if ([]) console.log([]);
+```
+
+
+
+else {}
+
+if 에 해당하지 않을 때
+
+```javascript
+// if () {} else {}
+
+const n = 37;
+
+if (n > 0) {
+    console.log('n 이 0 보다 큰 경우');
+} else {
+    console.log('n 이 0 보다 크지 않은 경우');
+}
+
+
+// 블록 안 문장이 하나 => 중괄호 없이 사용 가능
+
+if (n > 0) console.log('n 이 0 보다 큰 경우');
+else console.log('n 이 0 보다 크지 않은 경우');
+
+
+
+```
+
+
+
+else if {}
+
+if 에 해당하지 않을 때
+
+```javascript
+// if () {} else if () {} else {}
+
+const n = 15;
+
+if (n % 3 === 0) {
+    console.log('n 은 3 의 배수 입니다.');
+} else if (n % 5 === 0) {
+    console.log('n 은 5의 배수 입니다.')
+} else {
+    console.log('n 은 3 의 배수도 아니고, 5 의 배수도 아닙니다.')
+}
+
+// n 이 3 의 배수이면서, 5 의 배수이면 뭐라고 출력될까요?
+if (n % 3 === 0 && n % 5 === 0) {
+    console.log('n 은 15 의 배수입니다.');
+} else if (n % 3 === 0) {
+    console.log('n 은 3 의 배수입니다.');
+} else if (n % 5 === 0) {
+    console.log('n 은 5 의 배수입니다.');
+} else {
+    console.log('n 은 3 의 배수도 아니고, 5 의 배수도 아닙니다.');
+}
+// n % 3 === 0 과 n % 5 === 0 의 값은 여러번 반복되므로, 변수나 상수에 넣습니다.
+
+const multipleOfThree = n % 3 === 0;
+// n % 3 === 0  boolean 형을 평가하는 식
+const multipleOfFive = n % 5 === 0;
+
+// 중첩을 이용해서 표현할 수도 있습니다.
+
+if (multipleOfThree && multipleOfFive) {
+    console.log('n 은 15 의 배수입니다.');
+} else if (multipleOfThree) {
+    console.log('n 은 3 의 배수입니다.');
+} else if (multipleOfFive) {
+    console.log('n 은 5 의 배수입니다.');
+} else {
+    console.log('n 은 3 의 배수도 아니고, 5 의 배수도 아닙니다.');
+}
+
+
+if (multipleOfThree && multipleOfFive) {
+    console.log('n 은 15 의 배수입니다.');
+} else {
+    if (multipleOfThree) {
+        console.log('n 은 3 의 배수입니다.');
+    } else if (multipleOfFive) {
+        console.log('n 은 5 의 배수입니다.');
+    } else {
+        console.log('n 은 3 의 배수도 아니고, 5 의 배수도 아닙니다.');
+    }
+}
+```
+
+
+
+논리 연산자를 이용한 조건문 평가
+
+&&, ||, !
+
+```javascript
+// 표현식 && 표현식
+
+if (true && true) {
+    console.log('두개 모두 참이면 참');
+}
+
+if (true && false) {
+    console.log('한개만 참이면 거짓');
+}
+
+if (false && true) {
+    console.log('한개만 참이면 거짓');
+}
+
+if (false && false) {
+    console.log('두개 모두 거짓이면 거짓');
+}
+   
+// 표현식 || 표현식
+
+if (true || true) {
+    console.log('두개 모두 참이면 참');
+}
+
+if (true || false) {
+    console.log('한개만 참이면 참');
+}
+
+if (false || true) {
+    console.log('한개만 참이면 참');
+}
+
+if (false || false) {
+    console.log('두개 모두 거짓이면 거짓');
+}
+    
+// !표현식
+
+if (!true) {
+    console.log('참이면 거짓');
+}
+
+if (!false) {
+    console.log('거짓이면 참');
+}
+```
+
+
+
+논리 연산자를 이용한 조건부 실행
+
+```javascript
+// 표현식 && 표현식
+// 둘다 참일 때만 참
+// 표현식은 앞에 먼저 평가하고, 뒤에를 평가한다.
+// 앞 표현식을 평가해서 참일 때만, 뒤 표현식을 평가할 필요가 생기기 때문에 뒤의 표현식이 실행된다.
+
+let n = 5;
+
+(n % 5 === 0) && console.log('5로 나누어 떨어질 때만 실행');  // 실행됨
+
+// 앞 표현식의 평가 결과가 거짓을 때는 뒤 표현식을 평가할 필요가 없어서 실행하지 않는다.
+
+n = 6;
+
+(n % 5 === 0) && console.log('5로 나누어 떨어질 때만 실행');  // 실행안됨
+
+// 표현식 || 표현식
+// 둘 중 하나만 참이면 참
+// 앞 표현식을 평가를 해서 참 이면, 뒤 표현식을 평가할 필요가 없어서 실행하지 않는다.
+
+n = 5;
+
+n % 5 === 0 || console.log('5로 나누어 떨어지지 않을 때만 실행');  // 실행안됨
+
+// 앞 표현식을 평가를 해서 거짓일 때만, 뒤 표현식을 평가할 필요가 생기기 때문에 뒤의 표현식이 실행된다.
+
+n = 6;
+
+n % 5 === 0 || console.log('5로 나누어 떨어지지 않을 때만 실행');  // 실행됨
+```
+
+
+
+삼항 연산자를 이용한 조건부 실행
+
+```javascript
+// 조건 ? 조건이 참이면 실행되는 표현식 : 조건이 거짓이면 실행되는 표현식
+// 중괄호 {} 를 사용할 수 없는 문법이기 때문에 하나의 표현식만 가능
+
+// 표현식의 결과를 변수에 할당할 수 있음
+
+
+```
 
